se agrego la tabla FIRTST

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -74,7 +74,6 @@ A -> a"></textarea>
           </div>
         </div>
         
-        <!-- Nuevas secciones para mostrar más información -->
         <div class="results-grid">
           <div class="result-panel">
             <h2>
@@ -85,6 +84,9 @@ A -> a"></textarea>
               Conjuntos FIRST
             </h2>
             <div id="firstSets" class="sets-container"></div>
+
+            <h3>Tabla FIRST </h3>
+            <div id="firstTable" class="sets-container"></div>
           </div>
           
           <div class="result-panel">
