--- a/frontend/index.html
+++ b/frontend/index.html
@@ -74,7 +74,6 @@ A -> a"></textarea>
           </div>
         </div>
         
-        <!-- Nuevas secciones para mostrar más información -->
         <div class="results-grid">
           <div class="result-panel">
             <h2>
@@ -85,6 +84,9 @@ A -> a"></textarea>
               Conjuntos FIRST
             </h2>
             <div id="firstSets" class="sets-container"></div>
+
+            <h3>Tabla FIRST (por no terminal)</h3>
+            <div id="firstTable" class="sets-container"></div>
           </div>
           
           <div class="result-panel">
@@ -99,9 +101,23 @@ A -> a"></textarea>
             <div id="states" class="states-container"></div>
           </div>
         </div>
+
+        <div class="result-panel" style="margin-top:24px">
+          <h2>
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M3 3h18v18H3z"></path>
+            </svg>
+            Autómata LR(1)
+          </h2>
+          <div id="lr1Graph" class="graph-container"></div>
+        </div>
       </section>
     </main>
   </div>
+
+  <!-- viz.js para renderizar el DOT que envía el backend -->
+  <script src="https://unpkg.com/viz.js@2.1.2/viz.js"></script>
+  <script src="https://unpkg.com/viz.js@2.1.2/full.render.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
