--- a/frontend/index.html
+++ b/frontend/index.html
@@ -85,21 +85,11 @@ A -> a"></textarea>
             </h2>
             <div id="firstSets" class="sets-container"></div>
 
-            <h3>Tabla FIRST (por no terminal)</h3>
+            <h3>Tabla FIRST </h3>
             <div id="firstTable" class="sets-container"></div>
           </div>
           
-          <div class="result-panel">
-            <h2>
-              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <circle cx="12" cy="12" r="10"></circle>
-                <line x1="2" y1="12" x2="6" y2="12"></line>
-                <line x1="18" y1="12" x2="22" y2="12"></line>
-              </svg>
-              Estados LR(1)
-            </h2>
-            <div id="states" class="states-container"></div>
-          </div>
+          
         </div>
 
         <div class="result-panel" style="margin-top:24px">
