--- a/frontend/index.html
+++ b/frontend/index.html
@@ -108,6 +108,7 @@ A -> a"></textarea>
                 <tbody id="actionBody"></tbody>
               </table>
             </div>
+            <div id="grammarAnalysis" class="grammar-analysis-container"></div>
           </div> 
         </div>
 
